@@ -1,3 +1,3 @@
 module Exceptioner
-  VERSION = "0.0.5"
+  VERSION = "0.0.6.pre1"
 end
