@@ -2,6 +2,7 @@
 
 == 0.0.6 (24.01.2011)
 * config.ingore specifies ignored exceptions
+* support for Rails 2
 
 == 0.0.5 (13.01.2011)
 * fixed environment variables formatting
